--- a/src/index.html
+++ b/src/index.html
@@ -3,27 +3,61 @@
 <head>
 	<meta charset="utf-8">
 	<title>My portfolio</title>
-	<link rel="stylesheet" type="text/css" href="styles/fonts">
+	<link rel="stylesheet" type="text/css" href="styles/fonts.css">
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
-	<link rel="stylesheet" type="text/css" href="styles/styleOut">
+	<link rel="stylesheet" type="text/css" href="styles/styleOut.css">
 </head>
 <body>
+		<div class="header">
+			<div class="header__lang">
+				<span class="header__lang_rus">РУС</span>
+				<span class="header__lang_eng">ENG</span>
+			</div>
+		</div>
 	<div class="wrap">
 		<div class="img">
-			<img src="">
+			<img src="assets/img/avatar.jpg" class="img__avatar" width="100" height="100">
 		</div>
 		<div class="content">
-			<div class="content__header">Кузнецова Анна</div>
+			<div class="content__header">
+				<span class="content__header_surename">КУЗНЕЦОВА</span> 
+				<span class="content__header_surename">АННА</span>
+			</div>
 			<div class="content__social">
 				<ul class="content__social-list">		
 					<li class="content__social-item">
-						<img class="content__social-icon_email" src="">
-						<span class="content__social-text"></span>
-						<a href="#" class="content__social-link"></a>
+						<img class="content__social-icon _email" src="">
+						<span class="content__social-text">E-mail:</span>
+						<a href="#" class="content__social-link">anya.kuznetsova@gmail.com</a>
+					</li>
+					<li class="content__social-item">
+						<img class="content__social-icon _git" src="">
+						<span class="content__social-text">GitHub:</span>
+						<a href="#" class="content__social-link">anyaVyacheslavovna</a>
+					</li>
+					<li class="content__social-item">
+						<img class="content__social-icon _vk" src="">
+						<span class="content__social-text">ВКонтакте:</span>
+						<a href="#" class="content__social-link">Анна Кузнецова</a>
+					</li>
+					<li class="content__social-item">
+						<img class="content__social-icon _tel" src="">
+						<span class="content__social-text">Телефон:</span>
+						<a href="#" class="content__social-link">+7 913 471 65 43</a>
+					</li>
+					<li class="content__social-item">
+						<img class="content__social-icon _tw" src="">
+						<span class="content__social-text">Twitter:</span>
+						<a href="#" class="content__social-link">anna.kuznetsova</a>
+					</li>
+					<li class="content__social-item">
+						<img class="content__social-icon _loc" src="">
+						<span class="content__social-text">Локация:</span>
+						<a href="#" class="content__social-link">Новосибирск</a>
 					</li>
 				</ul>						
 			</div>
-			<div class="content__app"></div>
+			<div class="content__app">Емкость рынка, как следует из вышесказанного, позитивно уравновешивает межличностный анализ зарубежного опыта. Медиаплан, следовательно, категорически упорядочивает экспериментальнжый рекламный блок. Еще Траут показал, что маркетинг искажает бренд. Интересно отметить, что рекламный блок сфокусирован.</div>
 		</div>
 	</div>
 <script type="text/javascript" scr="scripts/scipts.js"></script>
