--- a/src/index.html
+++ b/src/index.html
@@ -16,44 +16,56 @@
 		</div>
 	<div class="wrap">
 		<div class="img">
-			<img src="assets/img/avatar.jpg" class="img__avatar" width="100" height="100">
+			<img src="assets/img/avatar.jpg" class="img__avatar" width="270" height="270">
 		</div>
 		<div class="content">
 			<div class="content__header">
-				<span class="content__header_surename">КУЗНЕЦОВА</span> 
-				<span class="content__header_surename">АННА</span>
+				<span class="content__header_surename">Кузнецова</span> 
+				<span class="content__header_name">Анна</span>
 			</div>
 			<div class="content__social">
 				<ul class="content__social-list">		
 					<li class="content__social-item">
 						<img class="content__social-icon _email" src="">
-						<span class="content__social-text">E-mail:</span>
-						<a href="#" class="content__social-link">anya.kuznetsova@gmail.com</a>
+						<div class="content__social-inf">
+							<span class="content__social-text">E-mail:</span>
+							<a href="#" class="content__social-link">anya.kuznetsova@gmail.com</a>
+						</div>
 					</li>
 					<li class="content__social-item">
 						<img class="content__social-icon _git" src="">
-						<span class="content__social-text">GitHub:</span>
-						<a href="#" class="content__social-link">anyaVyacheslavovna</a>
+						<div class="content__social-inf">
+							<span class="content__social-text">GitHub:</span>
+							<a href="#" class="content__social-link">anyaVyacheslavovna</a>
+						</div>
 					</li>
 					<li class="content__social-item">
 						<img class="content__social-icon _vk" src="">
-						<span class="content__social-text">ВКонтакте:</span>
-						<a href="#" class="content__social-link">Анна Кузнецова</a>
+						<div class="content__social-inf">
+							<span class="content__social-text">ВКонтакте:</span>
+							<a href="#" class="content__social-link">Анна Кузнецова</a>
+						</div>
 					</li>
 					<li class="content__social-item">
 						<img class="content__social-icon _tel" src="">
-						<span class="content__social-text">Телефон:</span>
-						<a href="#" class="content__social-link">+7 913 471 65 43</a>
+						<div class="content__social-inf">
+							<span class="content__social-text">Телефон:</span>
+							<a href="#" class="content__social-link">+7 913 471 65 43</a>
+						</div>
 					</li>
 					<li class="content__social-item">
 						<img class="content__social-icon _tw" src="">
-						<span class="content__social-text">Twitter:</span>
-						<a href="#" class="content__social-link">anna.kuznetsova</a>
+						<div class="content__social-inf">
+							<span class="content__social-text">Twitter:</span>
+							<a href="#" class="content__social-link">anna.kuznetsova</a>
+						</div>
 					</li>
 					<li class="content__social-item">
 						<img class="content__social-icon _loc" src="">
-						<span class="content__social-text">Локация:</span>
-						<a href="#" class="content__social-link">Новосибирск</a>
+						<div class="content__social-inf">
+							<span class="content__social-text">Локация:</span>
+							<a href="#" class="content__social-link">Новосибирск</a>
+						</div>
 					</li>
 				</ul>						
 			</div>
