--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
 					</li>
 				</ul>						
 			</div>
-			<div class="content__app">Емкость рынка, как следует из вышесказанного, позитивно уравновешивает межличностный анализ зарубежного опыта. Медиаплан, следовательно, категорически упорядочивает экспериментальнжый рекламный блок. Еще Траут показал, что маркетинг искажает бренд. Интересно отметить, что рекламный блок сфокусирован.</div>
+			<div class="content__app">Емкость рынка, как следует из вышесказанного, позитивно уравновешивает межличностный анализ зарубежного опыта. Медиаплан, следовательно, категорически упорядочивает экспериментальнжый рекламный блок.</div>
 		</div>
 	</div>
 <script type="text/javascript" scr="scripts/scipts.js"></script>
