create hbs file

--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,7 @@
 			<div class="content__app">Емкость рынка, как следует из вышесказанного, позитивно уравновешивает межличностный анализ зарубежного опыта. Медиаплан, следовательно, категорически упорядочивает экспериментальнжый рекламный блок. Еще Траут показал, что маркетинг искажает бренд. Интересно отметить, что рекламный блок сфокусирован.</div>
 		</div>
 	</div>
-<script src="scripts/handlebars.js" type="text/x-handlebars-template">
-	
-</script>
+<script src="scripts/handlebars.js"></script>
 <script type="text/javascript" scr="scripts/scipts.js"></script>
 </body>
 </html>
