realize background and icons

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 		</div>
 	<div class="wrap">
 		<div class="img">
-			<img src="assets/img/avatar.jpg" class="img__avatar" width="270" height="270">
+			<img src="assets/img/avatar.jpg" class="img__avatar" width="340" height="340">
 		</div>
 		<div class="content">
 			<div class="content__header">
@@ -25,43 +25,37 @@
 			</div>
 			<div class="content__social">
 				<ul class="content__social-list">		
-					<li class="content__social-item">
-						<img class="content__social-icon _email" src="">
+					<li class="content__social-item _email">
 						<div class="content__social-inf">
 							<span class="content__social-text">E-mail:</span>
 							<a href="#" class="content__social-link">anya.kuznetsova@gmail.com</a>
 						</div>
 					</li>
-					<li class="content__social-item">
-						<img class="content__social-icon _git" src="">
+					<li class="content__social-item  _git">
 						<div class="content__social-inf">
 							<span class="content__social-text">GitHub:</span>
 							<a href="#" class="content__social-link">anyaVyacheslavovna</a>
 						</div>
 					</li>
-					<li class="content__social-item">
-						<img class="content__social-icon _vk" src="">
+					<li class="content__social-item  _vk">
 						<div class="content__social-inf">
 							<span class="content__social-text">ВКонтакте:</span>
 							<a href="#" class="content__social-link">Анна Кузнецова</a>
 						</div>
 					</li>
-					<li class="content__social-item">
-						<img class="content__social-icon _tel" src="">
+					<li class="content__social-item _tel">
 						<div class="content__social-inf">
 							<span class="content__social-text">Телефон:</span>
 							<a href="#" class="content__social-link">+7 913 471 65 43</a>
 						</div>
 					</li>
-					<li class="content__social-item">
-						<img class="content__social-icon _tw" src="">
+					<li class="content__social-item _tw">
 						<div class="content__social-inf">
 							<span class="content__social-text">Twitter:</span>
 							<a href="#" class="content__social-link">anna.kuznetsova</a>
 						</div>
 					</li>
-					<li class="content__social-item">
-						<img class="content__social-icon _loc" src="">
+					<li class="content__social-item _loc">
 						<div class="content__social-inf">
 							<span class="content__social-text">Локация:</span>
 							<a href="#" class="content__social-link">Новосибирск</a>
@@ -69,7 +63,7 @@
 					</li>
 				</ul>					
 			</div>
-			<div class="content__app">Емкость рынка, как следует из вышесказанного, позитивно уравновешивает межличностный анализ зарубежного опыта. Медиаплан, следовательно, категорически упорядочивает экспериментальнжый рекламный блок. Еще Траут показал, что маркетинг искажает бренд. Интересно отметить, что рекламный блок сфокусирован.</div>
+			<div class="content__app">Емкость рынка, как следует из вышесказанного, позитивно уравновешивает межличностный анализ зарубежного опыта. Медиаплан, следовательно, категорически упорядочивает экспериментальнжый рекламный блок.</div>
 		</div>
 	</div>
 <script type="text/javascript" scr="scripts/scipts.js"></script>
